# offerly-test

./: .gitignore  Dockerfile  README.md  start.sh
backend/: offerly.db  pyproject.toml
backend/app/: database.py  enums.py  main.py  models.py  schemas.py
backend/app/routes/: influencers.py  offers.py
backend/tests/: conftest.py  test_smoke.py
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/components/: add-influencer-form.tsx  add-offer-form.tsx  offers-table.tsx
frontend/src/: App.tsx  api.ts  index.css
