[project]
name = "offerly-backend"
version = "0.1.0"
description = "Offer management system"
authors = [
    {name = "Andrii Khyzhniak",email = "archmag@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.2,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "alembic-postgresql-enum (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
